# metaxpytoch

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  DEVPOST.md  Dockerfile  PLAN.md  PYTHON_WORKERS_PLAN.md  README.md  SPEC.md  TAB-10-spec.md  backend(node)plan.md  err.txt  inference.py  openenv.yaml  out.txt  package-lock.json  pyproject.toml  requirements.txt  server.py
.next/: trace  trace-build
env/: coding_review_env.py  models.py
frontend/: .gitignore  README.md  auth.ts  middleware.ts  package-lock.json  package.json  server.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: agent-browser.tsx  agent-grid.tsx  agent-screen.tsx  mobile-nav.tsx  mobile-prompt-sheet.tsx  panopticon-view.tsx  plan-badge.tsx  prompt-bar.tsx  replay-scrubber.tsx  session-history-sidebar.tsx  session-summary.tsx  thinking-bottom-sheet.tsx  thinking-panel.tsx  thinking-sidebar.tsx  upgrade-modal.tsx  vm-tab.tsx
frontend/drizzle/: 0000_cute_post.sql
frontend/hooks/: use-dashboard-socket.ts  use-media-query.ts
frontend/lib/: billing-constants.ts  billing.ts  flowglad.ts  k2-think.ts  mock-data.ts  orchestrator.ts  r2.ts  session-store.ts  session-utils.ts  socket-client.ts  (+3 more)
graders/: grader.py
server/: app.py
symphony/: WORKFLOW.md  WORKFLOW.md.example  package-lock.json  package.json
tasks/: task_registry.py
tests/: test_env.py  test_grader.py
vm/: executor.py
workers/: agents.py  e2b_tools.py  gif.py  memory.py  replay.py  requirements-memory.txt  requirements.txt  test_agent.py  test_e2b.py  test_gif.py  worker.py
(+67 files in other folders)
