[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "secure-review-ai"
version = "0.1.0"
description = "AI code review environment with secure execution"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.3.0",
    "openenv-core>=0.2.0",
    "openai>=1.0.0",
]

[project.scripts]
server = "server:main"

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "graders*", "tasks*", "vm*", "workers*"]
